--- a/style.css
+++ b/style.css
@@ -164,3 +164,32 @@ body {
 .technology .img-box img {
   max-width: 100%;
 }
+
+/* ___________________________________ Clients ___________________________________ */
+.client {
+  background: #162c3b;
+  padding: 100px;
+  text-align: center;
+}
+.client p {
+  color: #ddd;
+  width: 70%;
+  margin: 0 auto;
+}
+.client .img-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+.client .img-box img {
+  cursor: pointer;
+  max-width: 200px;
+  margin: 20px;
+  opacity: 0.25;
+  transition: 0.3s;
+}
+.client .img-box img:hover {
+  opacity: 1;
+}
