testimonials section added

--- a/style.css
+++ b/style.css
@@ -193,3 +193,39 @@ body {
 .client .img-box img:hover {
   opacity: 1;
 }
+/* ___________________________________ Testimonials ___________________________________ */
+.testimonials {
+  position: relative;
+  padding: 100px;
+  background: #12222d;
+  text-align: center;
+}
+.testimonials .container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 40px;
+  flex-wrap: wrap;
+}
+.testimonials .container .content-box {
+  border-radius: 3px;
+  background: #fff;
+  padding: 60px 50px;
+  width: 550px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+}
+.testimonials .container .content-box p {
+  color: #333;
+  font-style: italic;
+  margin-bottom: 20px;
+}
+.testimonials .container .content-box h3 {
+  width: 100%;
+  font-weight: 500;
+  color: #3f8ffc;
+  text-align: end;
+}
